# Cobalt.MEXH

./: Cargo.toml  LICENCE  README.md  alpha_phase_mexh.komodoproject
examples/: magister.rs  magister_salvatio.rs  salvatio.rs  xor.rs  xor_batch.rs
src/: activatio.rs  lib.rs  magister.rs  neuronatus.rs  tensor.rs
